--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = kakutani-user
+	name = kutzoa-kk
 	email = dealus0609@gmail.com
 [core]
 	excludesfile = /Users/kkmac/.gitignore_global
